<?xml version="1.0"?>
<package format="2">
  <name>robot_control_pc</name>
  <version>0.1.0</version>
  <description>Diff drive 변환 노드 (C++): /cmd_vel → 좌/우 바퀴 속도</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
